--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -23,8 +23,8 @@ Build-Depends: debhelper,
  libprotobuf-dev, protobuf-compiler
 Standards-Version: 3.9.2
 Homepage: http://deflacash.info
-Vcs-Git: git://github.com/deflacash/deflacash.git
-Vcs-Browser: https://github.com/deflacash/deflacash
+Vcs-Git: git://github.com/deflacashprojectproject/deflacash.git
+Vcs-Browser: https://github.com/deflacashprojectproject/deflacash
 
 Package: deflacashd
 Architecture: any
