--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -22,7 +22,7 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/deflacash/deflacash.git"
+- "url": "https://github.com/deflacashprojectproject/deflacash.git"
   "dir": "deflacash"
 files: []
 script: |
